# Blokus2P

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/blokus2p/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  blokus_mcts.cpp
app/src/main/java/com/example/blokus2p/: MainActivity.kt
app/src/main/java/com/example/blokus2p/ai/: AiInterface.kt  BlokusBot.kt  MinmaxAi.kt  MonteCarloTreeSearchAi.kt  RandomAi.kt
app/src/main/java/com/example/blokus2p/events/: AppEvent.kt  GameEvent.kt  PolyominoEvent.kt
app/src/main/java/com/example/blokus2p/game/: BlokusBoard.kt  BlokusRules.kt  GameBoard.kt  GameEngine.kt  GameRules.kt  GameState.kt  Player.kt  Polyomino.kt
app/src/main/java/com/example/blokus2p/helper/: BitOperations.kt  PolyominoOperations.kt  SmalGamestateOperations.kt
app/src/main/java/com/example/blokus2p/model/: Move.kt  Node.kt  PlayerType.kt  PolyominoAllTransformations.kt  PolyominoNames.kt  ScoredMove.kt  SmalGameState.kt
app/src/main/java/com/example/blokus2p/viewModel/: GameState.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  rotat360.xml  rotate_left.xml  rotate_right.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/blokus2p/: BitOoperationsTest.kt  ExampleUnitTest.kt  GameEngineTest.kt  IsValidPlacementTest.kt  MinmaxAIVSMCT_AiTest.kt  PlacePolyominoTest.kt  RandomAiVSMinmaxAi.kt  RandomAiVSRandomAiTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
